# irs-tax-exempt-filing-analyzer

./: .gitignore  .tool-versions  Procfile.dev  Procfile.production  README.md  SOLUTION.md  justfile  pyproject.toml
irs-returns-frontend/: .prettierignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
irs-returns-frontend/src/: App.tsx  index.css  router.d.ts  router.tsx
irs-returns-frontend/src/components/: DebouncedInput.tsx  Delta.tsx  SortArrow.tsx
irs-returns-frontend/src/components/tables/: SortableHeader.tsx
irs-returns-frontend/src/components/ui/: badge.tsx  button.tsx
irs-returns-frontend/src/hooks/queries/: useCompanies.ts  useCompany.ts
irs-returns-frontend/src/hooks/tables/: useGetInvertedSortingHandler.ts
irs-returns-frontend/src/lib/: constants.ts  utils.ts
irs-returns-frontend/src/lib/api/: client.ts  companies.ts
irs-returns-frontend/src/lib/tables/: functions.ts
irs-returns-frontend/src/pages/: Root.tsx
irs-returns-frontend/src/pages/organizations/: CompanyTable.tsx  CompanyTableColumns.tsx  NullCell.tsx  NumberRowWithDelta.tsx
irs-returns-frontend/src/pages/organizations/detail/: CompanyDetails.tsx
irs-returns-frontend/src/routes/: __root.tsx  index.tsx  routeTree.gen.ts
irs-returns-frontend/src/routes/companies/: $companyId.tsx  index.tsx
irs-returns-frontend/src/types/: api.ts
irs_returns/: .env.example
irs_returns/core/: asgi.py  celery.py  models.py  urls.py  wsgi.py
irs_returns/core/management/commands/: load_fixtures.py  shell.py
irs_returns/core/settings/: base.py  local.py  production.py
irs_returns/organizations/: admin.py  datasets.py  models.py  parsers.py  tasks.py
irs_returns/organizations/migrations/: 0001_initial.py  0002_datasetjob.py  0003_update_returns_previous_year.py  0004_alter_organizationreturninformation_py_total_expenses_and_more.py  0005_organizationreturninformation_return_type.py  0006_organizationreturninformation_original_file_name.py
irs_returns/organizations/parsers/: __init__.py  errors.py  handler.py
irs_returns/organizations/parsers/strategies/: __init__.py  errors.py  general.py  irs_990.py  irs_990_ez.py  irs_990_pf.py
irs_returns/rest_api/: urls.py
irs_returns/rest_api/formatters/: common.py
irs_returns/rest_api/serializers/: dataset.py
irs_returns/rest_api/serializers/organizations/: __init__.py  companies.py  organizations.py  returns.py
irs_returns/rest_api/viewsets/: dataset.py
irs_returns/rest_api/viewsets/organizations/: companies.py  organizations.py
irs_returns/users/migrations/: 0001_initial.py
